# HR.LeaveManagement.Application/Features/LeaveRequest/Queries/GetAllLeaveRequests/LeaveRequestDto.cs
@@ -1,9 +1,13 @@
 ﻿using HR.LeaveManagement.Application.Features.LeaveType.Queries.GetAllLeaveTypes;
+using HR.LeaveManagement.Application.Models.Identity;
 
 namespace HR.LeaveManagement.Application.Features.LeaveRequest.Queries.GetAllLeaveRequests;
+
 public class LeaveRequestDto
 {
     public int Id { get; set; }
+    public Employee Employee { get; set; }
+    public string RequestingEmployeeId { get; set; } = string.Empty;
     public DateTime StartDate { get; set; }
     public DateTime EndDate { get; set; }
     public int LeaveTypeId { get; set; }
@@ -11,5 +15,5 @@ public class LeaveRequestDto
     public DateTime DateRequested { get; set; }
     public bool? Approved { get; set; }
     public bool Cancelled { get; set; }
-    public string RequestingEmployeeId { get; set; } = string.Empty;
+
 }
