# HR.LeaveManagement.BlazorUI/Services/Base/swagger.json
@@ -313,6 +313,16 @@
         "tags": [
           "LeaveRequests"
         ],
+        "parameters": [
+          {
+            "name": "isLoggedInUser",
+            "in": "query",
+            "schema": {
+              "type": "boolean",
+              "default": false
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -369,8 +379,48 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
           }
         }
       }
@@ -1030,21 +1080,9 @@
       "CreateLeaveAllocationCommand": {
         "type": "object",
         "properties": {
-          "numberOfDays": {
-            "type": "integer",
-            "format": "int32"
-          },
           "leaveTypeId": {
             "type": "integer",
             "format": "int32"
-          },
-          "period": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "employeeId": {
-            "type": "string",
-            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1081,6 +1119,28 @@
           "defaultDays": {
             "type": "integer",
             "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "Employee": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "nullable": true
+          },
+          "email": {
+            "type": "string",
+            "nullable": true
+          },
+          "firstName": {
+            "type": "string",
+            "nullable": true
+          },
+          "lastName": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1160,6 +1220,9 @@
             "type": "integer",
             "format": "int32"
           },
+          "employee": {
+            "$ref": "#/components/schemas/Employee"
+          },
           "startDate": {
             "type": "string",
             "format": "date-time"
@@ -1209,6 +1272,13 @@
             "type": "integer",
             "format": "int32"
           },
+          "employee": {
+            "$ref": "#/components/schemas/Employee"
+          },
+          "requestingEmployeeId": {
+            "type": "string",
+            "nullable": true
+          },
           "startDate": {
             "type": "string",
             "format": "date-time"
@@ -1234,10 +1304,6 @@
           },
           "cancelled": {
             "type": "boolean"
-          },
-          "requestingEmployeeId": {
-            "type": "string",
-            "nullable": true
           }
         },
         "additionalProperties": false
